--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <!--Bootstrap link-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--Google fons-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/ea7c971eee.js"></script>
     <!--Link to css file-->
@@ -15,55 +18,67 @@
     <title>Quinlan Hampton</title>
 </head>
 
-<body class="background">    
-<!--main part-->
+<body class="background">
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+            <a class="navbar-link" href="https://github.com/qhampton/" target="_blank"><i
+                    class="fab fa-github-square fa-2x"></i></a></a>
+        </li>
+        <li class="nav-item">
+            <a class="navbar-link" href="https://www.linkedin.com/in/quinlan-hampton-84290a126" target="_blank"><i
+                    class="fab fa-linkedin fa-2x"></i></a>
+        </li>
+        <li class="nav-item">
+            <a class="navbar-link" href="#contact" target="_blank"><i class="fas fa-envelope fa-2x"></i></a>
+        </li>
+    </ul>
+    <!--main part-->
     <article class="container main">
-
         <!--blank-->
         <div class="row"></div>
 
         <!--header-->
-        <div class="row" id= "box">
-            <div class="col-md-offset-1 col-md-12">
+        <div class="row" id="box">
+            <div class="col-offset-1 col-12">
                 <h2>QH Coding Lab</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-offset-1 col-md-12">
+            <div class="col-offset-1 col-12">
                 <p>Finding the balance between simplicity and functionality of design.</p>
             </div>
         </div>
 
         <!--work-->
-        <div class="row" id= "box">
-            <div class="col-md-offset-1 col-md-12" id="work">
+        <div class="row" id="box">
+            <div class="col-12" id="work">
                 <h2> Work </h2>
                 <!--portfolio grid-->
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="inner-grid">
+                    <div class="col-12">
+                        <!-- <div class="inner-grid"> -->
 
                             <div class="project">
                                 <img src="images/health-data.PNG" alt="Health Data Site" height="216" width="400" />
-                                <a href="https://healthdata.ucsd.edu/" target= "_blank">
+                                <a href="https://healthdata.ucsd.edu/" target="_blank">
                                     <h2>Health Data Site</h2>
                                 </a>
                             </div>
 
                             <div class="project">
                                 <img src="images/psychic-game.png" alt="Psychic Game" height="216" width="400" />
-                                <a href="https://qhampton.github.io/psychic-game" target= "_blank">
-                                <h2>Psychic Game</h2>
+                                <a href="https://qhampton.github.io/psychic-game" target="_blank">
+                                    <h2>Psychic Game</h2>
                                 </a>
                             </div>
 
                             <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-12">
                                     <div class="project">
 
                                         <img src="images/hp-trivia-2.png" alt="Trivia Game" height="216" width="400" />
-                                        <a href="https://qhampton.github.io/trivia-game" target= "_blank">
-                                        <h2>Harry Potter Trivia</h2>
+                                        <a href="https://qhampton.github.io/trivia-game" target="_blank">
+                                            <h2>Harry Potter Trivia</h2>
                                         </a>
                                     </div>
 
@@ -81,32 +96,33 @@
                 </div>
 
                 <!--About-->
-                <div class="row" id= "box">
-                    <div class="col-md-offset-1 col-md-12" id = "about">
+                <div class="row" id="box">
+                    <div class="col-offset-1 col-12" id="about">
                         <h2>About</h2>
                         <p>I am a database specialist and aspiring Full Stack developer currentyl based in San Diego,
                             California, but ready for anywhere.</p><br>
                         <p>My design and athestic derives from my love of games, from video - table top, the excitment
                             of trying new foods, and the pursuit of </p>
+                        <button type="button" class="btn btn-outline-info">Download Resume Here</button>
                     </div>
                 </div>
 
                 <!--Contact-->
-                <div class="row" id= "box">
-                    <div class="col-md-offset-1 col-md-12" id ="contact">
+                <div class="row" id="box">
+                    <div class="col-offset-1 col-12" id="contact">
                         <h2>Contact</h2>
                         <form>
                             <div class="form-group">
                                 <br>
                                 <!--first name-->
                                 <div class="row">
-                                    <div class="col-sm-offset-2 col-sm-6">
+                                    <div class="col-sm-offset-1 col-sm-6">
                                         <label for="firstname">First Name</label>
                                         <input type="firstname" class="form-control" id="firstname"
                                             placeholder="First Name">
                                     </div>
                                     <!--last name-->
-                                    <div class="col-sm-offset-2 col-sm-6">
+                                    <div class="col-sm-offset-1 col-sm-6">
                                         <label for="lastname">Last Name</label>
                                         <input type="lastname" class="form-control" id="lastname"
                                             placeholder="Last Name">
@@ -115,7 +131,7 @@
                                 <br>
                                 <!--email-->
                                 <div class="row">
-                                    <div class="col-sm-offset-2 col-sm-6">
+                                    <div class="col-offset-1 col-12">
                                         <label for="exampleInputEmail1">Email Address</label>
                                         <input type="email" class="form-control" id="exampleInputEmail1"
                                             aria-describedby="emailHelp" placeholder="name@email.com">
@@ -124,35 +140,30 @@
                                 <br>
                                 <!--message-->
                                 <div class="row">
-                                    <div class="col-md-offset-1 col-md-12">
+                                    <div class="col-offset-1 col-12">
                                         <label for="message">Message</label>
                                         <textarea class="form-control" id="message" rows="3"></textarea>
                                     </div>
                                 </div>
                                 <br>
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <button type="submit" class="btn btn-outline-info">Submit</button>
                                 <!--blank-->
                                 <div class="row"></div>
                                 <br>
                         </form>
                     </div>
                 </div>
-
-    <footer>
-        <a href="https://github.com/qhampton/" target= "_blank"><i class="fab fa-github-square fa-3x"></i></a>
-
-        <a href="https://www.linkedin.com/in/quinlan-hampton-84290a126" target= "_blank"><i
-                class="fab fa-linkedin fa-3x"></i></a>
-
-        <a href="#contact" target= "_blank"><i class="fas fa-envelope fa-3x"></i></a>
-    </footer>
-</article>
+    </article>
 </body>
 <!--Bootstrap JS-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+</script>
+
 </html>
