updated and added resume to page with working button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <ul class="nav justify-content-end">
         <li class="nav-item">
             <a class="navbar-link" href="https://github.com/qhampton/" target="_blank"><i
-                    class="fab fa-github-square fa-2x"></i></a></a>
+                    class="fab fa-github-square fa-2x"></i></a>
         </li>
         <li class="nav-item">
             <a class="navbar-link" href="https://www.linkedin.com/in/quinlan-hampton-84290a126" target="_blank"><i
@@ -38,7 +38,7 @@
         <div class="row"></div>
 
         <!--header-->
-        <div class="row" id="box">
+        <div class="row">
             <div class="col-offset-1 col-12">
                 <h2>QH Coding Lab</h2>
             </div>
@@ -50,7 +50,7 @@
         </div>
 
         <!--work-->
-        <div class="row" id="box">
+        <div class="row">
             <div class="col-12" id="work">
                 <h2> Work </h2>
                 <!--portfolio grid-->
@@ -58,101 +58,102 @@
                     <div class="col-12">
                         <!-- <div class="inner-grid"> -->
 
-                            <div class="project">
-                                <img src="images/health-data.PNG" alt="Health Data Site" height="216" width="400" />
-                                <a href="https://healthdata.ucsd.edu/" target="_blank">
-                                    <h2>Health Data Site</h2>
-                                </a>
-                            </div>
+                        <div class="project">
+                            <img src="images/health-data.PNG" alt="Health Data Site" height="216" width="400" />
+                            <a href="https://healthdata.ucsd.edu/" target="_blank">
+                                <h2>Health Data Site</h2>
+                            </a>
+                        </div>
 
-                            <div class="project">
-                                <img src="images/psychic-game.png" alt="Psychic Game" height="216" width="400" />
-                                <a href="https://qhampton.github.io/psychic-game" target="_blank">
-                                    <h2>Psychic Game</h2>
-                                </a>
-                            </div>
+                        <div class="project">
+                            <img src="images/psychic-game.png" alt="Psychic Game" height="216" width="400" />
+                            <a href="https://qhampton.github.io/psychic-game" target="_blank">
+                                <h2>Psychic Game</h2>
+                            </a>
+                        </div>
 
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="project">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="project">
 
-                                        <img src="images/hp-trivia-2.png" alt="Trivia Game" height="216" width="400" />
-                                        <a href="https://qhampton.github.io/trivia-game" target="_blank">
-                                            <h2>Harry Potter Trivia</h2>
-                                        </a>
-                                    </div>
+                                    <img src="images/hp-trivia-2.png" alt="Trivia Game" height="216" width="400" />
+                                    <a href="https://qhampton.github.io/trivia-game" target="_blank">
+                                        <h2>Harry Potter Trivia</h2>
+                                    </a>
+                                </div>
 
-                                    <div class="project">
-                                        <img src="https://picsum.photos/400/200/" alt="project 1" />
-                                        <h2>Coming Soon...</h2>
-                                    </div>
+                                <div class="project">
+                                    <img src="https://picsum.photos/400/200/" height="216" width="400" alt="project 1" />
+                                    <h2>Coming Soon...</h2>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <!--blank-->
+                    <div class="row"></div>
+                    <br>
+                </div>
+            </div>
+
+            <!--About-->
+            <div class="row">
+                <div class="col-offset-1 col-12" id="about">
+                    <h2>About</h2>
+                    <p>I am a database specialist and aspiring Full Stack developer currentyl based in San Diego,
+                        California, but ready for anywhere.</p><br>
+                    <p>My design and athestic derives from my love of games, from video - table top, the excitment
+                        of trying new foods, and the pursuit of </p>
+                    <button type="button" class="btn btn-outline-info"> <a href="images/Quinlan_Hampton_Resume_2019.pdf" target="_blank">Download Resume Here</a></button>
+                </div>
+            </div>
+
+            <!--Contact-->
+            <div class="row">
+                <div class="col-offset-1 col-12" id="contact">
+                    <h2>Contact</h2>
+                </div>
+                <form>
+                    <div class="form-group">
+                        <br>
+                        <!--first name-->
+                        <div class="row">
+                            <div class="col-offset-2 col-6"> <label for="firstname">First Name</label>
+                                <input type="input" class="form-control" id="firstname" placeholder="First Name">
+                            </div>
+                            <!--last name-->
+                            <div class="col-sm-6">
+                                <label for="lastname">Last Name</label>
+                                <input type="input" class="form-control" id="lastname" placeholder="Last Name">
+                            </div>
+                        </div>
+                        <br>
+                        <!--email-->
+                        <div class="row">
+                            <div class="col-offset-1 col-12" id="contact">
+                                <label for="exampleInputEmail1">Email Address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="name@email.com">
+                            </div>
+                        </div>
+                        <br>
+                        <!--message-->
+                        <div class="row">
+                            <div class="col-offset-1 col-12" id="contact">
+                                <label for="message">Message</label>
+                                <textarea class="form-control" id="message" rows="3"></textarea>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-offset-1 col-12" id="contact">
+                        <button type="submit" class="btn btn-outline-info">Submit</button>
                         </div>
                         <!--blank-->
                         <div class="row"></div>
                         <br>
-                    </div>
-                </div>
-
-                <!--About-->
-                <div class="row" id="box">
-                    <div class="col-offset-1 col-12" id="about">
-                        <h2>About</h2>
-                        <p>I am a database specialist and aspiring Full Stack developer currentyl based in San Diego,
-                            California, but ready for anywhere.</p><br>
-                        <p>My design and athestic derives from my love of games, from video - table top, the excitment
-                            of trying new foods, and the pursuit of </p>
-                        <button type="button" class="btn btn-outline-info">Download Resume Here</button>
-                    </div>
-                </div>
-
-                <!--Contact-->
-                <div class="row" id="box">
-                    <div class="col-offset-1 col-12" id="contact">
-                        <h2>Contact</h2>
-                        <form>
-                            <div class="form-group">
-                                <br>
-                                <!--first name-->
-                                <div class="row">
-                                    <div class="col-sm-offset-1 col-sm-6">
-                                        <label for="firstname">First Name</label>
-                                        <input type="firstname" class="form-control" id="firstname"
-                                            placeholder="First Name">
-                                    </div>
-                                    <!--last name-->
-                                    <div class="col-sm-offset-1 col-sm-6">
-                                        <label for="lastname">Last Name</label>
-                                        <input type="lastname" class="form-control" id="lastname"
-                                            placeholder="Last Name">
-                                    </div>
-                                </div>
-                                <br>
-                                <!--email-->
-                                <div class="row">
-                                    <div class="col-offset-1 col-12">
-                                        <label for="exampleInputEmail1">Email Address</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1"
-                                            aria-describedby="emailHelp" placeholder="name@email.com">
-                                    </div>
-                                </div>
-                                <br>
-                                <!--message-->
-                                <div class="row">
-                                    <div class="col-offset-1 col-12">
-                                        <label for="message">Message</label>
-                                        <textarea class="form-control" id="message" rows="3"></textarea>
-                                    </div>
-                                </div>
-                                <br>
-                                <button type="submit" class="btn btn-outline-info">Submit</button>
-                                <!--blank-->
-                                <div class="row"></div>
-                                <br>
-                        </form>
-                    </div>
-                </div>
+                </form>
+            </div>
+        </div>
     </article>
 </body>
 <!--Bootstrap JS-->
