updated: work section with projects and the contact section to be aligned

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
         <!--header-->
         <div class="row">
-            <div class="col-offset-1 col-12">
+            <div class="col-12">
                 <h2>QH Coding Lab</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-offset-1 col-12">
+            <div class="col-12">
                 <p>Finding the balance between simplicity and functionality of design.</p>
             </div>
         </div>
@@ -68,9 +68,9 @@
                 </div>
 
                 <div class="project">
-                    <img src="images/psychic-game.png" alt="Psychic Game" height="216" width="400" />
-                    <a href="https://qhampton.github.io/psychic-game" target="_blank">
-                        <h2>Psychic Game</h2>
+                    <img src="images/movoogle.png" alt="Project 1" height="216" width="400" />
+                    <a href="https://qhampton.github.io/project-1/" target="_blank">
+                        <h2>Movoogle</h2>
                     </a>
                 </div>
 
@@ -85,8 +85,10 @@
                         </div>
 
                         <div class="project">
-                            <img src="https://picsum.photos/400/200/" height="216" width="400" alt="project 1" />
-                            <h2>Coming Soon...</h2>
+                            <img src="images/fundeed.png" height="216" width="400" alt="project 2" />
+                            <a href=" https://thawing-stream-56809.herokuapp.com/" target="_blank">
+                                <h2>Fundeed</h2>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -97,7 +99,7 @@
         </div>
         <!--About-->
         <div class="row">
-            <div class="col-offset-1 col-12" id="about">
+            <div class="col-12" id="about">
                 <h2>About</h2>
                 <p>I am a database specialist and aspiring Full Stack developer currentyl based in San Diego,
                     California, but ready for anywhere.</p><br>
@@ -110,44 +112,20 @@
 
         <!--Contact-->
         <div class="row">
-            <div class="col-offset-1 col-12" id="contact">
+            <div class="col-12" id="contact">
                 <h2>Contact</h2>
-            </div>
-
-            <div class="form-group">
                 <br>
                 <!--first name-->
-                <div class="row">
-                    <div class="col-offset-2 col-6"> <label for="firstname">First Name</label>
+                    <label for="firstname">First Name</label>
                         <input type="text" class="form-control" id="firstname" placeholder="First Name">
-                    </div>
-                    <!--last name-->
-                    <div class="col-sm-6">
-                        <label for="lastname">Last Name</label>
+                    <label for="lastname">Last Name</label>
                         <input type="text" class="form-control" id="lastname" placeholder="Last Name">
-                    </div>
-                </div>
-                <br>
-                <!--email-->
-                <div class="row">
-                    <div class="col-offset-1 col-12">
-                        <label for="exampleInputEmail1">Email Address</label>
+                    <label for="exampleInputEmail1">Email Address</label>
                         <input type="email" class="form-control" id="exampleInputEmail1"
                             placeholder="name@email.com">
-                    </div>
-                </div>
-                <br>
-                <!--message-->
-                <div class="row">
-                    <div class="col-offset-1 col-12">
-                        <label for="message">Message</label>
+                    <label for="message">Message</label>
                         <textarea class="form-control" id="message" rows="3"></textarea>
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-offset-1 col-12">
-                        <button type="submit" class="btn btn-outline-info">Submit</button>
+                    <button type="submit" class="btn btn-outline-info">Submit</button>
                     </div>
                 </div>
                 <!--blank-->
